# FloriBot1.0_ROS2_Jazzy_Base

src/base/: CMakeLists.txt
src/base/include/base/: diff_drive_lib.hpp  hardware_node.hpp  kinematics_calculator.h  kinematics_node.h
src/base/launch/: base_launch.py
src/base/params/: hardware_params.yaml  kinematics_params.yaml
src/base/src/nodes/: hardware_node.cpp  kinematics_node.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: launch.py
src/robot_description/rviz/: robot.rviz
src/robot_description/urdf/: robot.urdf.xacro
src/web_teleop/: setup.py
src/web_teleop/web_teleop/: web_teleop_server.py
